# multilingual-safety-steering

./: .gitignore  eval_safety.py  linguistic_subspace.py  linguistic_subspace_explore.py  linguistic_subspace_steering.py  main.py  pyproject.toml  refusal_vector_cast.py  steerable.py  steering.py  steering_cast.py
_experiments/: README.md  eval_safety.py  refusal_vector.py
core/: hookable.py  inspectable.py  steerable.py
data/: __init__.py  _utils.py  advbench.py  flores_plus.py  jbb.py  malicious_instruct.py  polyrefuse.py  tdc23_redteam.py  types.py
data/eval/: harmful_test_translated_de.json  harmful_test_translated_ko.json  harmful_test_translated_th.json
data/json/polyrefuse/: harmful_test_translated_ar.json  harmful_test_translated_es.json  harmful_test_translated_fr.json  harmful_test_translated_it.json  harmful_test_translated_ja.json  harmful_test_translated_ru.json  harmful_test_translated_zh.json
data/json/polyrefuse_harmless/: harmless_test_translated_ar.json  (+12 more)
hooks/: caching.py  language_ablation.py  refusal.py
output/cast/: korean.json  korean_linguistic_subspace.json  refusal_vectors.svec
output/linguistic-subspace/: M_s.pt  MdL.pt
output/refusal-vector-training/: prompt_response_pairs.json  refusal_vectors.pt
scripts/: run_evaluations.sh  run_refusal_workflows.sh
utils/: external_llm_client.py  harmfulness_judge.py  language_subspace.py  refusal_judge.py
workflows/: language_ablation_pca.py  refusal_vector_intervention.py  safety_evaluation.py  test_generate.py  test_hooking.py  train_cast_refusal.py  utility_evaluation.py
