[project]
name = "multilingual-safety-steering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "activation-steering",
    "datasets>=4.1.1",
    "einops>=0.8.1",
    "fasttext>=0.9.3",
    "polars>=1.33.1",
    "scikit-learn>=1.7.2",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.56.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
]

[tool.uv.sources]
activation-steering = { git = "https://github.com/IBM/activation-steering.git", rev = "52be602" }
